fix: input placeholder size not visible on mobile

--- a/src/components/ReposPage/repos.css
+++ b/src/components/ReposPage/repos.css
@@ -41,3 +41,9 @@
 .commits-container {
   margin-top: 2em;
 }
+
+/* @media only screen and (max-width: 600px) {
+  input::placeholder {
+    font-size: 1em;
+  }
+} */
